Implement alternative checkmark algorithm
Fix failing tests